--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 
 .topnav {
   z-index: 3;
+  top: 0;
   position: fixed;
   background-color: #e9e9e9;
   height: 48px;
@@ -145,4 +146,14 @@ body {
   position: absolute;
   left: 20vw;
   top: 48px;
+}
+
+.about {
+  margin-top: 10vh;
+  margin-left: 10vw;
+  margin-right: 10vw;
+}
+
+.margin-top{
+  margin-top: 5vh;
 }
